# Risk-Assessment-Engine-v2

./: .gitignore  QA_TEST_RESULTS_2026-02-22.md  QUICKSTART.md  README.md  __init__.py  __main__.py  config.py  main.py  pyproject.toml  requirements.txt  setup.sh  start_web.py
Outputs/2026-02-20-PT-Ajaib-Futures-Asia-Partner-Assessment/: report.md  (+4 more)
docs/: BI-LICENSE-VERIFICATION-GUIDE.md
engine/: __init__.py  ai_assessor.py  assessor.py  classifier.py  decision.py  partner_assessor.py  vendor_assessor.py
generators/: __init__.py  report_generator.py
models/: __init__.py  ai_project_data.py  assessment_result.py  partner_data.py  research_data.py  vendor_data.py
scorers/: __init__.py  base.py  parameter_a.py  parameter_b.py  parameter_c.py  parameter_d.py  parameter_e.py  parameter_f.py  parameter_g.py  parameter_h.py  parameter_i.py
templates/: ai_project_template.json  partner_template.json  research_template.json  vendor_template.json
tests/: QA-TEST-RESULTS.md  andapay-report.md  andapay-research.json  andapay-result.json  danarapay-report.md  danarapay-research.json  danarapay-result.json  hss-report.md  hss-result.json  hss-sumber-remitan-research.json  koinworks-report.md  koinworks-research.json  koinworks-result.json  saku-rupiah-report.md  saku-rupiah-research.json  saku-rupiah-result.json  singapay-report.md  singapay-research.json  singapay-result.json  test_web_api.py  tiga-pilar-media-report.md  tiga-pilar-media-research.json  tiga-pilar-media-result.json
tools/: extract_eml_pdfs.py
web/: __init__.py  app.py  form_config.py  serializers.py
(+95 files in other folders)
