[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "risk_assessment_engine"
version = "1.0.0"
description = "Risk Assessment Engine for merchant, partner, vendor, and AI project assessments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = [".."]
include = ["risk_assessment_engine*"]
